[package]
name = "remcached"
version = "0.1.0"
authors = ["Reeze Xia <reeze.xia@gmail.com>"]

[dependencies]
futures = { git = "https://github.com/alexcrichton/futures-rs" }
tokio-core = { git = "https://github.com/tokio-rs/tokio-core" }
bytes = "0.3.0"
log = "*"
env_logger = "*"

[dependencies.memcached]
path = "libmemcached"
